# hypha

./: .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  README.md  README.zh-CN.md  pyproject.toml
.claude/: settings.local.json
.github/workflows/: ci.yml
adapters/claude-code/: README.md  settings.example.json
adapters/claude-code/hooks/: benchmark_guard.sh  memory_consolidate.sh  on_failure_reflect.sh  session_inject.sh  skill_harvester.sh
adapters/codex/: README.md
adapters/cursor/: README.md
adapters/openclaw/: README.md
bench/: README.md  tiny.jsonl
bench/swe-skills-bench/: README.md
core/: __init__.py  cli.py
core/algo/: __init__.py  consolidate.py  export.py  guard.py  harvest.py  imports.py  queries.py  reflect.py
core/prompts/: consolidate.md  harvest.md  reflect.md
core/schema/: __init__.py  memory.py  reflection.py  skill.py
examples/claude-code/: README.md
tests/: test_consolidate.py  test_export.py  test_imports.py  test_memory.py  test_queries.py
